Fix: Fix bug with overflow on products.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,9 +14,16 @@ html {
     font-family: 'Libre Franklin', sans-serif;
 }
 
+body{
+    overflow-x: hidden;
+}
+.container{
+    max-width:100%;
+}
+
 @media only screen and (max-width: 768px) {
     .columns {
-        margin-left: 0 !important;
+        margin: 0 !important;
     }
 }
 
